Fixed Java syntax stuff